fix(docs): 彻底移除小组成员信息并修复重复脚本\n\n- 删除 Apple 风格页面 meta 与正文中的小组成员信息\n- 去重滚动动画/移动菜单监听，修复变量重复声明\n- 通过 lint 校验

--- a/public/TAT理论深度学习平台_Apple风格_backup.html
+++ b/public/TAT理论深度学习平台_Apple风格_backup.html
@@ -1291,24 +1291,8 @@
         })
       })
 
-      // 滚动动画 - Intersection Observer
-      const observerOptions = {
-        threshold: 0.1,
-        rootMargin: '0px 0px -50px 0px',
-      }
-
-      const observer = new IntersectionObserver(function (entries) {
-        entries.forEach((entry) => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('visible')
-          }
-        })
-      }, observerOptions)
-
-      // 观察所有需要动画的元素
-      document.querySelectorAll('.fade-in-section').forEach((el) => {
-        observer.observe(el)
-      })
+      // 滚动动画 - Intersection Observer（已在文件底部提供一次实现，这里移除重复定义）
+      // 保留底部统一实现，避免变量重复声明导致的错误
 
       // 概念词典切换功能
       function toggleConcept(conceptId) {
