fix(images): 修复页面图片丢失问题
- 所有 Apple 风格静态页统一使用根路径 / 引用 public 下资源
- 为主图添加 lazy/async，避免阻塞渲染
- Vue 论文复现视图改为使用已编码图片路径常量

--- a/public/TAT理论深度学习平台_Apple风格.html
+++ b/public/TAT理论深度学习平台_Apple风格.html
@@ -572,7 +572,13 @@
               <p class="text-gray-600">全面展示TAT理论的核心要素、关键概念和应用领域</p>
             </div>
             <div class="text-center">
-              <img src="Mind%20Map.png" alt="TAT理论思维导图" class="w-full h-auto max-w-full" />
+              <img
+                src="/Mind%20Map.png"
+                alt="TAT理论思维导图"
+                class="w-full h-auto max-w-full"
+                loading="lazy"
+                decoding="async"
+              />
             </div>
             <div class="mt-8 text-center">
               <p class="text-sm text-gray-500">
@@ -592,9 +598,11 @@
             </div>
             <div class="text-center bg-white/50 rounded-2xl p-8">
               <img
-                src="TAT%E7%90%86%E8%AE%BA%E7%9A%84%E7%BB%93%E6%9E%84%E6%96%B9%E7%A8%8B.png"
+                src="/TAT%E7%90%86%E8%AE%BA%E7%9A%84%E7%BB%93%E6%9E%84%E6%96%B9%E7%A8%8B.png"
                 alt="TAT理论结构方程模型"
                 class="w-full h-auto max-w-full mx-auto rounded-xl shadow-lg"
+                loading="lazy"
+                decoding="async"
               />
             </div>
             <div class="mt-8 text-center">
